parallel model run function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,19 @@ export(MaC)
 export(MaC.weighted)
 export(mice.fit)
 export(mice.impute.norm.fit)
+export(model.parallel.run)
 export(sampler.fit)
 export(sampler.univ.fit)
 import(mice)
+import(tidyverse)
 importFrom(glmnet,cv.glmnet)
 importFrom(gsubfn,strapplyc)
+importFrom(gtools,smartbind)
+importFrom(magrittr,"%>%")
 importFrom(mice,mice)
 importFrom(mvtnorm,dmvnorm)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapplyLB)
+importFrom(parallel,stopCluster)
 importFrom(pcaPP,l1median)
 importFrom(randtoolbox,sobol)
