--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(mice.impute.norm.fit)
 export(model.parallel.run)
 export(sampler.fit)
 export(sampler.univ.fit)
+import(dplyr)
 import(mice)
 import(tidyverse)
 importFrom(glmnet,cv.glmnet)
