MPI parallel functionality added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,10 @@ Imports:
     mvtnorm,
     pcaPP,
     parallel,
-    randtoolbox
+    randtoolbox,
+    doMPI,
+    Rmpi,
+    foreach
 Depends: R (>= 3.5.0)
 RoxygenNote: 6.1.0
 Suggests: 
