--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(model.parallel.run)
 export(sampler.fit)
 export(sampler.univ.fit)
 import(dplyr)
+import(foreach)
 import(mice)
 import(tidyverse)
 importFrom(glmnet,cv.glmnet)
