snow version of multi-node parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(mice.fit)
 export(mice.impute.norm.fit)
 export(model.mpi.run)
 export(model.parallel.run)
+export(model.snow.run)
 export(sampler.fit)
 export(sampler.univ.fit)
 import(dplyr)
