--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,16 +9,16 @@ export(model.parallel.run)
 export(model.snow.run)
 export(sampler.fit)
 export(sampler.univ.fit)
+import(doSNOW)
 import(dplyr)
 import(foreach)
 import(mice)
+import(snow)
 import(tidyverse)
 importFrom(glmnet,cv.glmnet)
 importFrom(gsubfn,strapplyc)
 importFrom(mice,mice)
 importFrom(mvtnorm,dmvnorm)
-importFrom(parallel,makeCluster)
 importFrom(parallel,parLapplyLB)
-importFrom(parallel,stopCluster)
 importFrom(pcaPP,l1median)
 importFrom(randtoolbox,sobol)
