making SimInf available before %dopar% is called

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(mice.impute.norm)
 export(model.mpi.run)
 export(model.parallel.run)
 export(model.snow.run)
+import(SimInf)
 import(doSNOW)
 import(dplyr)
 import(foreach)
