model.snow.run no longer part of the package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,12 +27,8 @@ Imports:
     parallel,
     randtoolbox,
     Rmpi,
-    foreach,
-    doSNOW,
-    snow
 Depends: R (>= 3.4.0)
 RoxygenNote: 6.1.0
 Suggests: 
     testthat,
-    SimInf,
-    doMPI
+    SimInf
