first attempt at writing functions that will allow for parallel execution of imputations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(tidyverse)
 importFrom(glmnet,cv.glmnet)
 importFrom(gsubfn,strapplyc)
 importFrom(mvtnorm,dmvnorm)
+importFrom(parallel,makeCluster)
 importFrom(parallel,parLapplyLB)
 importFrom(pcaPP,l1median)
 importFrom(randtoolbox,sobol)
