mice imputations are now done in parallel, using all available cores of 1 node, and taking into account uncertainty around parameters of chained equations.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ LazyData: true
 Imports:
     stats,
     utils,
-    mice (>= 3.3.0),
+    mice (>= 3.3.4),
     rlang,
     tidyverse,
+    purrr,
     dplyr,
     gtools,
     glmnet,
