--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,10 @@ import(tidyverse)
 importFrom(glmnet,cv.glmnet)
 importFrom(gsubfn,strapplyc)
 importFrom(mvtnorm,dmvnorm)
+importFrom(parallel,clusterApply)
+importFrom(parallel,clusterSetRNGStream)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapplyLB)
+importFrom(parallel,stopCluster)
 importFrom(pcaPP,l1median)
 importFrom(randtoolbox,sobol)
